--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,10 @@ spring.datasource.url=jdbc:h2:mem:clientdb
 
 spring.mvc.contentnegotiation.favor-parameter = true
 spring.mvc.contentnegotiation.media-types.pdf = application/pdf
+spring.mail.properties.mail.smtp.ssl.trust= *
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=dragon.marcel.test@gmail.com
+spring.mail.password=dragon-Test18
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
