--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,5 @@ spring.mail.username=dragon.marcel.test@gmail.com
 spring.mail.password=dragon-Test18
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+spring.jackson.serialization.fail-on-empty-beans=false
