--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,12 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.example</groupId>
-	<artifactId>Client</artifactId>
+	<artifactId>Aloes - gabinet odnowy</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>Client</name>
-	<description>Demo project for Spring Boot</description>
+	<name>Aloes</name>
+	<description>gabinet odnowy</description>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
